--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -69,6 +69,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             tools:textColor="#FFFFFF"
+            android:text="admin"
             tools:textColorHint="#FFFEFF" />
 
         <Button
@@ -95,7 +96,7 @@
             android:hint="Contraseña"
             android:inputType="textPassword"
             android:textColor="@color/white"
-
+            android:text="admin"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
