--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,7 +51,7 @@
             app:srcCompat="@drawable/logo" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txtTitle"
             android:layout_width="92dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -61,12 +61,12 @@
             android:textColor="@color/white" />
 
         <SearchView
-            style="@style/SearchViewStyle"
             android:layout_width="223dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/black"
-            android:foregroundTint="#FFFFFF" />
+            android:foregroundTint="#FFFFFF"
+            style="@style/CustomSearchView"/>
 
         <ImageButton
             android:id="@+id/imageButton"
