--- a/app/src/main/res/layout/fragment_descripcion_pintura.xml
+++ b/app/src/main/res/layout/fragment_descripcion_pintura.xml
@@ -1,14 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".fragments.DescripcionPinturaFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="DescripcionPintura" />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="175dp"
+            android:layout_height="38dp"
+            android:text="Mona Lisa"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="119dp"
+            tools:layout_editor_absoluteY="29dp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="411dp"
+            android:layout_height="246dp"
+            android:layout_marginTop="80dp"
+            android:src="@drawable/mona_lisa"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="101dp"
+            android:layout_height="26dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Artista:"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="352dp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="193dp"
+            android:layout_height="27dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Fecha de creacion:"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="437dp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="101dp"
+            android:layout_height="26dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Descripcion"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="518dp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="192dp"
+            android:layout_height="27dp"
+            android:textColor="#FFFFFF"
+            android:text="Leonardo Davinci"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="393dp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="192dp"
+            android:layout_height="27dp"
+            android:text="3 Mayo 2024"
+            android:textColor="#FFFFFF"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="479dp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="296dp"
+            android:layout_height="108dp"
+            android:text="Obra maestra de Leonardo da Vinci, cautiva a los espectadores con su enigmática mirada y sonrisa sutil. Pintada durante el Renacimiento "
+            android:textColor="#FFFFFF"
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="564dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
