--- a/app/src/main/res/layout/fragment_pinturas.xml
+++ b/app/src/main/res/layout/fragment_pinturas.xml
@@ -1,14 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".fragments.PinturasFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pinturas" />
+        android:layout_height="match_parent">
 
+        <SearchView
+            android:layout_width="367dp"
+            android:layout_height="32dp"
+            android:background="#3C3C3C"
+            tools:layout_editor_absoluteX="22dp"
+            tools:layout_editor_absoluteY="59dp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="122dp"
+            android:layout_height="36dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Galeria I"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="144dp"
+            tools:layout_editor_absoluteY="16dp" />
+
+        <LinearLayout
+            android:layout_width="380dp"
+            android:layout_height="90dp"
+            android:background="#222222"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="103dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="126dp"
+                android:layout_height="90dp"
+                android:src="@drawable/mona_lisa" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="156dp"
+                    android:layout_height="26dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="La Monalisa "
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="158dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:text="Leonardo Davinci"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="413dp"
+            android:layout_height="514dp"
+            tools:layout_editor_absoluteY="217dp" >
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
