--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -39,6 +39,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
+
+                    android:background="#000000"
                     android:text="Monalisa"
                     android:textColor="@color/white"
                     android:textSize="20dp"
