--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,7 +81,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/txtGalerias"
             android:layout_width="369dp"
             android:layout_height="52dp"
             android:layout_marginTop="20dp"
@@ -98,9 +98,11 @@
         <LinearLayout
             android:layout_width="395dp"
             android:layout_height="113dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteX="12dp"
-            tools:layout_editor_absoluteY="591dp">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtGalerias">
 
             <ImageView
                 android:id="@+id/imageView12"
