--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -61,6 +61,7 @@
             android:ems="10"
             android:hint="Correo"
             android:inputType="textEmailAddress"
+            android:text="admin"
             android:textColor="#FFFFFF"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
@@ -69,16 +70,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             tools:textColor="#FFFFFF"
-            android:text="admin"
             tools:textColorHint="#FFFEFF" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="219dp"
+            android:layout_height="45dp"
             android:layout_marginTop="40dp"
             android:backgroundTint="@color/white"
-            android:text="Ingresar"
+            android:text="Iniciar sesion"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,8 +95,8 @@
             android:ems="10"
             android:hint="Contraseña"
             android:inputType="textPassword"
-            android:textColor="@color/white"
             android:text="admin"
+            android:textColor="@color/white"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,24 +107,29 @@
             android:id="@+id/txtRegistrate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="¿No tienes cuenta? Regístrate"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/button" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="O inicia con  cuenta "
-            android:textColor="@color/white"
+        <Button
+            android:id="@+id/button"
+            android:layout_width="219dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@color/white"
+            android:drawableRight="@drawable/google"
+            android:drawablePadding="8dp"
+            android:text="Inicia sesion con"
+            android:textColor="@color/black"
+            android:textSize="14dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
