--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,12 +61,11 @@
             android:textColor="@color/white" />
 
         <SearchView
+            style="@style/CustomSearchView"
             android:layout_width="223dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/black"
-            android:foregroundTint="#FFFFFF"
-            style="@style/CustomSearchView"/>
+            android:background="@color/black" />
 
         <ImageButton
             android:id="@+id/imageButton"
