culminacion del diseño de galerias

--- a/app/src/main/res/layout/fragment_autor.xml
+++ b/app/src/main/res/layout/fragment_autor.xml
@@ -12,7 +12,7 @@
         android:background="@color/black">
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/imgAutor"
             android:layout_width="188dp"
             android:layout_height="173dp"
             android:layout_marginTop="50dp"
@@ -22,14 +22,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/txtDescripcionAutor"
             android:layout_width="256dp"
             android:layout_height="206dp"
             android:layout_marginTop="40dp"
             android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+            app:layout_constraintTop_toBottomOf="@+id/imgAutor" />
 
         <ImageView
             android:id="@+id/imageView13"
@@ -39,7 +41,7 @@
             android:src="@drawable/facebook_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView16" />
+            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionAutor" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
