--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -50,7 +50,7 @@
                     app:layout_constraintVertical_bias="0.302" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/txtAutorDescri"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
@@ -62,7 +62,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/txtTitlePinturas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -71,7 +71,7 @@
                     android:textAlignment="textStart"
                     android:textColor="@color/white"
                     app:layout_constraintEnd_toStartOf="@+id/imageView7"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtAutorDescri" />
 
                 <ImageView
                     android:id="@+id/imageView7"
