--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
                 android:background="#000000">
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/imgPinturaDescr"
                     android:layout_width="162dp"
                     android:layout_height="166dp"
                     android:layout_marginTop="20dp"
@@ -40,7 +40,7 @@
                     android:textSize="22dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/imgPinturaDescr" />
 
                 <TextView
                     android:id="@+id/textView15"
