--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -12,7 +12,7 @@
         android:background="#000000">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imgGaleria1"
             android:layout_width="361dp"
             android:layout_height="487dp"
             android:src="@drawable/mapa_centro_cultural"
